k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-js
  template:
    metadata:
      labels:
        app: node-js
    spec:
      containers:
      - name: node-js-sample
        image: srikantb1/node-js-sample:1.0
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /usr/src/app/data
          name: node-js-storage
      volumes:
      - name: node-js-storage
        persistentVolumeClaim:
          claimName: node-js-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: node-js-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30007
  selector:
    app: node-js
